loads in bugapoint in mapchooser component

--- a/src/app/admin-components/bugapoint-management/map-location-chooser/map-location-chooser.component.css
+++ b/src/app/admin-components/bugapoint-management/map-location-chooser/map-location-chooser.component.css
@@ -1,5 +1,19 @@
 #map {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 60%;
   z-index: 0;
+  margin: 1vw auto;
+}
+
+.inputContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 10px;
 }
